--- a/Food/Views/DishTableViews/DishTableMainHeader/DishTableHeader.xib
+++ b/Food/Views/DishTableViews/DishTableMainHeader/DishTableHeader.xib
@@ -4,13 +4,12 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="mVn-Pb-8Qe" customClass="DishTableNameHeader" customModule="Food" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="mVn-Pb-8Qe" customClass="DishTableHeader" customModule="Food" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="365" height="73"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -22,7 +21,6 @@
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Ycv-9h-rgf"/>
-            <color key="backgroundColor" systemColor="systemBrownColor"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="O2A-un-vMN" secondAttribute="trailing" id="Kbi-JT-UK0"/>
                 <constraint firstItem="O2A-un-vMN" firstAttribute="leading" secondItem="mVn-Pb-8Qe" secondAttribute="leading" id="Qe8-mf-gaE"/>
@@ -31,14 +29,9 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="titleLabel" destination="O2A-un-vMN" id="om6-DF-oK0"/>
+                <outlet property="dishTitleLabel" destination="O2A-un-vMN" id="YCl-g8-Fg6"/>
             </connections>
             <point key="canvasLocation" x="-297.82608695652175" y="116.85267857142857"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
