--- a/Food/Views/Base.lproj/Main.storyboard
+++ b/Food/Views/Base.lproj/Main.storyboard
@@ -189,9 +189,9 @@
         <!--Dish View Controller-->
         <scene sceneID="emx-6w-TrB">
             <objects>
-                <viewController id="p5Y-w7-vXB" customClass="DishViewController" customModule="Food" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="p5Y-w7-vXB" customClass="DishViewController" customModule="Food" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="znZ-lB-aFW">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gwz-1p-nMB">
@@ -201,7 +201,7 @@
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yoL-kv-xnW" userLabel="Dish Table View">
-                                <rect key="frame" x="0.0" y="277" width="414" height="565"/>
+                                <rect key="frame" x="0.0" y="277" width="414" height="619"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="114" id="sHV-Fu-SO2" userLabel="TableViewCell" customClass="DishTableViewCell" customModule="Food" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="114"/>
